--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
-  "name": "d3/modulename",
-  "description": "the module description",
-  "type": "oxideshop-module",
+  "name": "d3/oxid-twig-extensions",
+  "description": "additonal extensions for the OXID Twig template renderer component",
+  "type": "oxideshop-component",
   "keywords": [
     "oxid",
-    "modules",
-    "eShop",
+    "twig",
+    "template",
+    "extensions",
     "d3"
   ],
   "authors": [
@@ -24,30 +25,11 @@
     "GPL-3.0-or-later"
   ],
   "require": {
-    "php": ">=7.3",
-    "oxid-esales/oxideshop-ce": "6.8 - 6.10"
-  },
-  "require-dev": {
-    "php": "^7.4",
-    "phpunit/phpunit" : "^9.5",
-    "friendsofphp/php-cs-fixer": "^3.9",
-    "phpstan/phpstan": "^1.8"
-  },
-  "extra": {
-    "oxideshop": {
-      "blacklist-filter": [
-        "*.md",
-        "composer.json",
-        ".php-cs-fixer.php",
-        "*.xml",
-        "*.neon"
-      ],
-      "target-directory": "d3/thismodule"
-    }
+    "oxid-esales/oxideshop-ce": "^7.0.0"
   },
   "autoload": {
     "psr-4": {
-      "D3\\ThisModule\\": "../../../source/modules/d3/thismodule"
+      "D3\\OxidTwigExtensions\\": "./src"
     }
   }
 }
