--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
   ],
   "require": {
     "oxid-esales/oxideshop-ce": "^7.0.0",
-    "twig/twig": "^3.6"
+    "twig/twig": "^3.6",
+    "jasny/twig-extensions": "^1.3.0"
   },
   "autoload": {
     "psr-4": {
